# ttstt

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2026-06-30-001-feat-ttstt-voice-toolkit-plan.md
scratch/: spike.py
src/ttstt/: __init__.py  __main__.py  cli.py  config.py
tests/: test_cli.py  test_config.py
