[project]
name = "ttstt"
version = "0.1.0"
description = "Local-first, modular voice toolkit for Linux: speech-to-text and text-to-speech you actually own."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
]

[project.scripts]
ttstt = "ttstt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ttstt"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
